security,optimization,code cleanup

--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -14,3 +14,9 @@ Duplicate.productForm.code=Product already exists!
   
 NotFound.loginForm.account=Account not found
 Disabled.loginForm.account=Account is disabled
+
+Length.productForm.code=Code cannot be longer than 6 characters
+Length.productForm.name=Name cannot be longer than 10 characters
+Max.productForm.price=Price cannot be more than 99999
+Min.productForm.price=Price must be at least 1 [j]
+Positive.productForm.price=Price must be a positive
