--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-
 # DATABASE CONFIG
 #
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #jdbc.driverClassName=com.mysql.jdbc.Driver
 #
 spring.datasource.url=jdbc:mysql://localhost:3306/eshop
